--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -3,8 +3,8 @@
     SPDX-License-Identifier: GPL-3.0-only
 -->
 <resources>
-    <string name="english_ime_name" translatable="false">AnaBoard debug</string>
-    <string name="spell_checker_service_name" translatable="false">AnaBoard debug Spell Checker</string>
-    <string name="ime_settings" translatable="false">AnaBoard debug Settings</string>
+    <string name="english_ime_name" translatable="false">AnaBoard</string>
+    <string name="spell_checker_service_name" translatable="false">AnaBoard Spell Checker</string>
+    <string name="ime_settings" translatable="false">AnaBoard Settings</string>
 
 </resources>
